Fix Read Path of Property Sheets
Fix read path of PCL.props.

--- a/Apply/PCL/_Template/KinectV2/KinectV2/KinectV2.vcxproj
+++ b/Apply/PCL/_Template/KinectV2/KinectV2/KinectV2.vcxproj
@@ -57,23 +57,21 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\..\Kinect-for-Windows-v2.props" />
     <Import Project="..\..\..\PCL.props" />
-    <Import Project="..\..\..\..\..\..\..\..\Dropbox\PCL 1.7.2 2015.01.29\PCL.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\..\Kinect-for-Windows-v2.props" />
-    <Import Project="..\..\..\..\..\..\..\..\Dropbox\PCL 1.7.2 2015.01.29\PCL.props" />
+    <Import Project="..\..\..\PCL.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\..\Kinect-for-Windows-v2.props" />
     <Import Project="..\..\..\PCL.props" />
-    <Import Project="..\..\..\..\..\..\..\..\Dropbox\PCL 1.7.2 2015.01.29\PCL.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\..\Kinect-for-Windows-v2.props" />
-    <Import Project="..\..\..\..\..\..\..\..\Dropbox\PCL 1.7.2 2015.01.29\PCL.props" />
+    <Import Project="..\..\..\PCL.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
